# riglet

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.yaml  Cargo.toml  LICENSE  README.md  biome.json  lefthook.yaml  package.json  tsconfig.base.json  turbo.json
apps/riglet/: README.md  go.mod  go.sum
apps/riglet/cmd/riglet/: main.go
apps/riglet/configs/: config.go  config_test.go  load_test.go  registry.go  registry_test.go
apps/riglet/configs/pkgjson/: format.go  format_test.go
apps/riglet/engine/: cue.go  engine_test.go  ignore.go  walk.go
apps/rigra/: Cargo.toml
apps/rigra/src/: checks.rs  cli.rs  config.rs  conv.rs  format.rs  lib.rs  lint.rs  main.rs  output.rs  sync.rs  utils.rs
apps/rigra/src/models/: policy.rs  sync_policy.rs
apps/rigra/tests/: integration.rs
