[workspace]
members = [
  "apps/rigra"
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["KazViz <kaz@kazviz.com>"]
repository = "https://github.com/nazahex/rigra"

resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
